Dashboard: lay out foundations for sidebar
* move Sidebar to its own component
* create SidebarItem using NavLink
* `dashboard__main` switch to flexbox from grid

--- a/web/src/components/Dashboard/Dashboard.scss
+++ b/web/src/components/Dashboard/Dashboard.scss
@@ -10,14 +10,10 @@
   background-color: var(--elevation-1);
 }
 
-.dashboard__sidebar {
-  background-color: var(--elevation-1);
-}
-
 .dashboard__main {
   flex-grow: 1;
-  display: grid;
-  grid-template-columns: 15rem auto;
+  display: flex;
+  flex-direction: row;
 
   > * {
     height: 100%;
