--- a/web/src/components/Dashboard/Dashboard.scss
+++ b/web/src/components/Dashboard/Dashboard.scss
@@ -3,6 +3,9 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .dashboard__topbar {
