--- a/web/src/components/Dashboard/Sidebar/Sidebar.scss
+++ b/web/src/components/Dashboard/Sidebar/Sidebar.scss
@@ -2,5 +2,7 @@
   background-color: var(--elevation-1);
   display: flex;
   flex-direction: column;
-  width: 15rem;
+  flex-basis: 15rem;
+  flex-shrink: 0;
+  flex-grow: 0;
 }
