--- a/web/src/components/Task/Task.scss
+++ b/web/src/components/Task/Task.scss
@@ -2,10 +2,10 @@
 
 .task {
   display: flex;
-  gap: 0.75rem;
+  gap: 0.8rem;
   background-color: var(--elevation-1);
   border-radius: 0.3rem;
-  padding: 0.7rem 0.7rem;
+  padding: 0.8rem;
   border-width: 0 0 0 0.3rem;
   border-style: solid;
   border-color: transparent;
