--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -20,7 +20,15 @@ input[type='text']::placeholder {
   color-scheme: dark;
 
   --elevation-0: #000000;
-  --elevation-1: #121212;
+  --elevation-1: #0d0d0d;
+  --elevation-2: #121212;
+  --elevation-3: #141414;
+  --elevation-4: #171717;
+  --elevation-5: #1c1c1c;
+  --elevation-6: #1f1f1f;
+  --elevation-7: #242424;
+  --elevation-8: #262626;
+  --elevation-9: #292929;
 
   --font-size-xs: 0.75rem;
   --font-size-sm: 0.875rem;
