polishing frontend components
* Heading line-height to normal
* Heading margin to 0
* adjust to Heading margin change in Dashboard, StepsPage
* move task-group to its own component, TaskGroup, under Task
* adjust home ProjectCard grid gap for consistency with TaskGroup

--- a/web/src/components/Heading/Heading.scss
+++ b/web/src/components/Heading/Heading.scss
@@ -1,8 +1,8 @@
 @import '../../styles/font-size';
 
 .heading {
-  line-height: 1;
   font-weight: 700;
   color: white;
+  margin: 0;
   @include font-size();
 }
