--- a/web/src/pages/Project.scss
+++ b/web/src/pages/Project.scss
@@ -1,11 +1,5 @@
-.project__task-group {
+.project {
   display: flex;
-  gap: 0.5rem;
-  margin-bottom: 3rem;
   flex-direction: column;
-}
-
-.project__task-group__title {
-  text-transform: capitalize;
-  opacity: 0.3;
+  gap: 3rem;
 }
