fix scrolling issue in dashboard
* adjust width and padding in StepsPage due to box-sizing: border-box

--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -1,5 +1,9 @@
 $font: 'Sora';
 
+* {
+  box-sizing: border-box;
+}
+
 p {
   margin: 0;
   line-height: 1.6 !important;
@@ -10,7 +14,7 @@ body {
   background-color: var(--elevation-0);
   color: white;
   margin: 0;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 input[type='text']::placeholder {
