--- a/web/src/components/Dashboard/Dashboard.scss
+++ b/web/src/components/Dashboard/Dashboard.scss
@@ -1,9 +1,9 @@
 .dashboard {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
@@ -12,13 +12,11 @@
   flex-grow: 1;
   display: flex;
   flex-direction: row;
-
-  > * {
-    height: 100%;
-  }
+  height: calc(100% - 3rem);
 }
 
 .dashboard__content {
-  margin: 3rem 4rem;
+  padding: 3rem 4rem;
   width: 100%;
+  overflow: auto;
 }
