move Dashboard to RootLayout

--- a/web/src/pages/root/_layout/Sidebar/SidebarItem.scss
+++ b/web/src/pages/root/_layout/Sidebar/SidebarItem.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/project-colors';
+@import '../../../../styles/project-colors';
 
 .dashboard__sidebar__item {
   text-decoration: none;
