feat(web): improve root layout readability by adding sections
* change ProjectCard and Task background-color to --elevation-4

* add hover colors to ProjectCard and Task of --elevation-6

* create new component, Section, for dividing dashboard content

* TaskGroup extends Section component

* change Home gap value to match with Inbox's and Project's

* good morning heading and project info wraps in Section

* project name in Project has a bottom border

* display description in Project

* RootLayout linear gradient from 15rem to 110%

--- a/web/src/components/ProjectCard/ProjectCard.scss
+++ b/web/src/components/ProjectCard/ProjectCard.scss
@@ -2,7 +2,7 @@
 
 .project-card {
   border-radius: 0.3rem;
-  background-color: var(--elevation-2);
+  background-color: var(--elevation-4);
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
@@ -12,6 +12,10 @@
   border-width: 0 0 0 0.3rem;
   border-style: solid;
   @include project-colors(border-color);
+
+  &:hover {
+    background-color: var(--elevation-6);
+  }
 }
 
 .project-card > * {
