--- a/web/src/pages/root/Project.scss
+++ b/web/src/pages/root/Project.scss
@@ -1,5 +1,13 @@
 .project {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1rem;
+
+  &__name {
+    border-bottom: 1px var(--elevation-9) solid;
+  }
+
+  &__description {
+    color: rgba($color: #fff, $alpha: 0.4);
+  }
 }
