--- a/web/src/components/Section/Section.scss
+++ b/web/src/components/Section/Section.scss
@@ -2,4 +2,14 @@
   padding: 2rem;
   background-color: var(--elevation-2);
   border-radius: 0.3rem;
+
+  &--titled {
+    padding-top: 1.25rem;
+  }
+}
+
+.section__title {
+  text-transform: capitalize;
+  border-bottom: 1px var(--elevation-9) solid;
+  padding-bottom: 0.5rem;
 }
