--- a/web/src/pages/root/Project.scss
+++ b/web/src/pages/root/Project.scss
@@ -11,3 +11,9 @@
     color: rgba($color: #fff, $alpha: 0.4);
   }
 }
+
+.task-list {
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+}
