feat(web): improve project background gradient using accent colors
* change project colors from 400 to 300

* utilize accent colors for background gradient substituting pure black

* change gradient end from 110% to 100%

* add 0.3rem border radius to top left corner of dashboard content

* change colors list in _project-colors.scss to represent variable names not the color itself

--- a/web/src/pages/root/_layout/RootLayout.scss
+++ b/web/src/pages/root/_layout/RootLayout.scss
@@ -21,10 +21,15 @@
   padding: 3rem 4rem;
   width: 100%;
   overflow: auto;
+  border-top-left-radius: 0.3rem;
 
   @each $color in $colors {
     &--color-#{index($colors, $color) - 1} {
-      background: linear-gradient(#{$color}, transparent 110%);
+      background: linear-gradient(
+        150deg,
+        var($color),
+        var($color + '-accent') 100%
+      );
     }
   }
 }
