refactor(web): migrate from scss to scss modules for components
* changes yet to be made in pages folder

* add css modules config in vite.config.t.s

* change class naming convention

* modifiers starts with single underscore (_) instead of double dash (--)

* class names are camelCase instead of kebab-case

* remove element part of the naming convention

* since the css is already scoped to each component there is no need for the element part

* change _font-size.scss and _project-colors.scss to follow the new naming convention

* rewrite conditional class names in Task and TextInput

* textinput class name becomes textInput

--- a/web/src/components/ProjectCard/ProjectCard.module.scss
+++ b/web/src/components/ProjectCard/ProjectCard.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/project-colors';
 
-.project-card {
+.projectCard {
   border-radius: 0.3rem;
   background-color: var(--elevation-4);
   display: inline-flex;
@@ -16,13 +16,13 @@
   &:hover {
     background-color: var(--elevation-6);
   }
+
+  & > * {
+    margin: 0.3rem 0;
+  }
 }
 
-.project-card > * {
-  margin: 0.3rem 0;
-}
-
-.project-card__name {
+.name {
   font-weight: bold;
   color: white;
   text-decoration: none;
@@ -33,12 +33,12 @@
   }
 }
 
-.project-card__description {
+.description {
   font-size: var(--font-size-xs);
   color: var(--color-grey-700);
 }
 
-.project-card__more {
+.moreButton {
   $radius: 2.25rem;
   background-color: transparent;
   border-radius: 50%;
