--- a/web/src/components/Section/Section.module.scss
+++ b/web/src/components/Section/Section.module.scss
@@ -3,12 +3,12 @@
   background-color: var(--elevation-2);
   border-radius: 0.3rem;
 
-  &--titled {
+  &_titled {
     padding-top: 1.25rem;
   }
 }
 
-.section__title {
+.title {
   text-transform: capitalize;
   border-bottom: 1px var(--elevation-9) solid;
   padding-bottom: 0.5rem;
