refactor(web): migrate from scss to scss modules for pages
* use scss modules for all elements in pages directory

* rename LoginSlashRegister.scss to Auth.module.scss

* rename Project.scss to TaskList.module.scss

* RootLayout styles follow new naming convention

* utilize mc function in RootLayout, SidebarItem to merge class names

* shorten dashboard class names to not include dashboard

--- a/web/src/pages/account/_layout/AccountLayout.module.scss
+++ b/web/src/pages/account/_layout/AccountLayout.module.scss
@@ -1,4 +1,4 @@
-.steps-page {
+.container {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -6,7 +6,7 @@
   align-items: stretch;
 }
 
-.steps-page__panel {
+.panel {
   display: flex;
   flex-direction: column;
   align-items: stretch;
