--- a/web/src/pages/root/_layout/Sidebar/SidebarItemGroup.module.scss
+++ b/web/src/pages/root/_layout/Sidebar/SidebarItemGroup.module.scss
@@ -1,4 +1,4 @@
-.dashboard__sidebar__item-group__title {
+.title {
   text-transform: capitalize;
   opacity: 0.3;
   font-size: var(--font-size-xs);
