--- a/web/src/pages/root/_layout/RootLayout.module.scss
+++ b/web/src/pages/root/_layout/RootLayout.module.scss
@@ -10,21 +10,21 @@
   left: 0;
 }
 
-.dashboard__main {
+.main {
   flex-grow: 1;
   display: flex;
   flex-direction: row;
   height: calc(100% - 3rem);
 }
 
-.dashboard__content {
+.content {
   padding: 3rem 4rem;
   width: 100%;
   overflow: auto;
   border-top-left-radius: 0.3rem;
 
   @each $color in $colors {
-    &--color-#{index($colors, $color) - 1} {
+    &_color#{index($colors, $color) - 1} {
       background: linear-gradient(
         150deg,
         var($color),
