--- a/web/src/styles/_project-colors.scss
+++ b/web/src/styles/_project-colors.scss
@@ -1,10 +1,24 @@
-$colors: --color-teal-200, --color-cyan-200, --color-blue-200,
-  --color-purple-200, --color-pink-200, --color-red-200, --color-orange-200,
-  --color-green-200, --color-yellow-200, --color-brown-200;
+$colors: 
+  --color-red-200,
+  --color-pink-200,
+  --color-purple-200,
+  --color-deep-purple-200,
+  --color-indigo-200,
+  --color-blue-200,
+  --color-light-blue-200,
+  --color-cyan-200,
+  --color-teal-200,
+  --color-green-200,
+  --color-light-green-200,
+  --color-lime-200,
+  --color-yellow-200,
+  --color-amber-200,
+  --color-orange-200,
+  --color-deep-orange-200;
 
 @mixin project-colors($property) {
   @each $color in $colors {
-    $i: index($colors, $color) - 1;
+    $i: calc(index($colors, $color) - 1);
 
     &_color#{$i} {
       #{$property}: var($color);
