refactor(web): rename ProjectCard to Project and move it under pages/root/_layout/Content

--- a/web/src/pages/root/_layout/Content/Project/Project.module.scss
+++ b/web/src/pages/root/_layout/Content/Project/Project.module.scss
@@ -1,6 +1,6 @@
-@import '../../styles/project-colors';
+@import '../../../../../styles/project-colors';
 
-.projectCard {
+.project {
   border-radius: 0.3rem;
   background-color: var(--elevation-4);
   display: inline-flex;
