refactor(web): move ProjectLoading and TaskLoading under Project and Task, respectively

--- a/web/src/pages/root/_layout/Content/Project/ProjectLoading/ProjectLoading.module.scss
+++ b/web/src/pages/root/_layout/Content/Project/ProjectLoading/ProjectLoading.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/shimmer-animation';
+@import '../../../../../../styles/shimmer-animation';
 
 .loading {
   border-radius: 0.3rem;
