refactor(web): use alias path in scss imports

--- a/web/src/pages/root/_layout/Content/Task/TaskLoading/TaskLoading.module.scss
+++ b/web/src/pages/root/_layout/Content/Task/TaskLoading/TaskLoading.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../styles/shimmer-animation';
+@import '@/styles/shimmer-animation';
 
 .taskLoading {
   background-color: var(--elevation-4);
