feat(web): squircle consistency
* make SidebarItem a squircle with horizontal margin

* make TopbarButton a squircle instead of a circle

* make Project's moreButton a squircle

* remove Sidebar scrollbar auto-hide

* simplify sidebarItem crazy padding

--- a/web/src/pages/root/_layout/Sidebar/SidebarItem.module.scss
+++ b/web/src/pages/root/_layout/Sidebar/SidebarItem.module.scss
@@ -5,18 +5,15 @@
   height: 2.75rem;
   display: flex;
   flex-direction: row;
-  gap: 1.2rem;
+  gap: 1.25rem;
   align-items: center;
   color: white;
-  padding: 0
-    calc(
-      2.5rem / 2 /* TopbarButton radius */ + 0.75rem
-        /* Topbar horizontal padding */ - 16px / 2
-        /* TopbarButton Icon radius */ - 0.2rem /* SidebarItem left border */
-    );
-  border-width: 0 0 0 0.2rem;
+  padding: 0 1.2rem;
+  border-width: 0 0 0 0.3rem;
   border-style: solid;
   border-color: transparent;
+  border-radius: 0.3rem;
+  margin: 0 0.75rem;
   font-size: var(--font-size-sm);
 
   &_active {
