--- a/web/src/pages/root/_layout/Topbar/TopbarButton.module.scss
+++ b/web/src/pages/root/_layout/Topbar/TopbarButton.module.scss
@@ -2,7 +2,7 @@ $radius: 2.5rem;
 
 .topbarButton {
   background-color: transparent;
-  border-radius: 50%;
+  border-radius: 0.3rem;
   height: $radius;
   width: $radius;
   border: none;
