--- a/web/src/pages/root/_layout/Content/Project/Project.module.scss
+++ b/web/src/pages/root/_layout/Content/Project/Project.module.scss
@@ -41,7 +41,7 @@
 .moreButton {
   $radius: 2.25rem;
   background-color: transparent;
-  border-radius: 50%;
+  border-radius: 0.3rem;
   height: $radius;
   width: $radius;
   border: none;
