--- a/web/src/pages/root/_layout/Sidebar/Sidebar.module.scss
+++ b/web/src/pages/root/_layout/Sidebar/Sidebar.module.scss
@@ -6,13 +6,7 @@
   flex-basis: 15rem;
   flex-shrink: 0;
   flex-grow: 0;
-  overflow: overlay;
-
-  &:not(:hover) {
-    &::-webkit-scrollbar-thumb {
-      display: none;
-    }
-  }
+  overflow: auto;
 
   &::-webkit-scrollbar {
     width: 0.6rem;
@@ -23,7 +17,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    border-radius: 3rem;
+    border-radius: 0.6rem;
     box-shadow: inset 0 0 0.6rem 0.6rem var(--color-grey-700);
     border: solid 0.1rem transparent;
     border-top: none;
