feat(web): remove colorful background
* display project color in ProjectDetails as left border

* ProjectDetails takes in query instead of project

* utilize QueryState in ProjectDetails

--- a/web/src/pages/root/_layout/Content/ProjectDetails/ProjectDetails.module.scss
+++ b/web/src/pages/root/_layout/Content/ProjectDetails/ProjectDetails.module.scss
@@ -1,3 +1,11 @@
+@import '@/styles/project-colors';
+
+.card {
+  border-left-width: 0.3rem;
+  border-left-style: solid;
+  @include project-colors(border-color);
+}
+
 .name {
   border-bottom: 1px var(--elevation-9) solid;
 }
