--- a/web/src/pages/root/_layout/Content/Task/Task.module.scss
+++ b/web/src/pages/root/_layout/Content/Task/Task.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/project-colors';
+@import '@/styles/shimmer-animation';
 
 .taskCard {
   display: flex;
@@ -46,4 +47,43 @@
   display: grid;
   place-self: center;
   padding: 0;
+}
+
+.loading {
+  background-color: var(--elevation-4);
+  border-radius: 0.3rem;
+  padding-left: 1.1rem;
+  padding: 0.8rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0.8rem;
+  align-items: center;
+
+  & > div {
+    flex-grow: 1;
+  }
+
+  span {
+    display: block;
+    height: 1rem;
+    border-radius: 0.3rem;
+    @include shimmer-animation;
+  }
+
+  &Done {
+    width: 1rem;
+    border-radius: 100% !important;
+    background-color: var(--elevation-9);
+  }
+
+  &Task {
+    width: 30%;
+    background-color: var(--elevation-9);
+    margin-bottom: 0.3rem;
+  }
+
+  &Description {
+    width: 95%;
+    background-color: var(--elevation-9);
+  }
 }
