--- a/web/src/pages/root/_layout/Content/Project/Project.module.scss
+++ b/web/src/pages/root/_layout/Content/Project/Project.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/project-colors';
+@import '@/styles/shimmer-animation';
 
 .project {
   border-radius: 0.3rem;
@@ -53,5 +54,29 @@
 
   &:hover {
     background-color: var(--color-grey-900);
+  }
+}
+
+.loading {
+  border-radius: 0.3rem;
+  background-color: var(--elevation-4);
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
+  gap: 0.5rem;
+
+  & > span {
+    display: block;
+    height: 1rem;
+    background-color: var(--elevation-9);
+    border-radius: 0.3rem;
+    @include shimmer-animation;
+  }
+
+  &Name {
+    margin-bottom: 0.5rem;
+    width: 30%;
+  }
+
+  &Description {
+    width: 95%;
   }
 }
