refactor(web): create new shimmer-element mixin
* shimmer-element is for spans with shimmer-animation

--- a/web/src/pages/root/_layout/Content/ProjectDetails/ProjectDetails.module.scss
+++ b/web/src/pages/root/_layout/Content/ProjectDetails/ProjectDetails.module.scss
@@ -16,11 +16,8 @@
 }
 
 .loading {
-  & > span {
-    display: block;
-    border-radius: 0.3rem;
-    background-color: var(--elevation-9);
-    @include shimmer-animation;
+  span {
+    @include shimmer-element;
   }
 
   &Name {
