--- a/web/src/pages/root/_layout/Content/Project/Project.module.scss
+++ b/web/src/pages/root/_layout/Content/Project/Project.module.scss
@@ -63,12 +63,9 @@
   padding: 0.5rem 0.5rem 0.5rem 1rem;
   gap: 0.5rem;
 
-  & > span {
-    display: block;
+  span {
     height: 1rem;
-    background-color: var(--elevation-9);
-    border-radius: 0.3rem;
-    @include shimmer-animation;
+    @include shimmer-element;
   }
 
   &Name {
