--- a/web/src/pages/root/_layout/Content/Task/Task.module.scss
+++ b/web/src/pages/root/_layout/Content/Task/Task.module.scss
@@ -64,26 +64,21 @@
   }
 
   span {
-    display: block;
     height: 1rem;
-    border-radius: 0.3rem;
-    @include shimmer-animation;
+    @include shimmer-element;
   }
 
   &Done {
     width: 1rem;
     border-radius: 100% !important;
-    background-color: var(--elevation-9);
   }
 
   &Task {
     width: 30%;
-    background-color: var(--elevation-9);
     margin-bottom: 0.3rem;
   }
 
   &Description {
     width: 95%;
-    background-color: var(--elevation-9);
   }
 }
