--- a/web/src/pages/root/_layout/RootLayout.module.scss
+++ b/web/src/pages/root/_layout/RootLayout.module.scss
@@ -3,21 +3,17 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  position: fixed;
-  top: 0;
-  left: 0;
 }
 
 .main {
-  flex-grow: 1;
   display: flex;
   flex-direction: row;
-  height: calc(100% - 3rem);
+  min-height: 0;
 }
 
 .content {
   padding: 3rem 4rem;
-  width: 100%;
+  flex-grow: 1;
   overflow: auto;
   border-top-left-radius: 0.3rem;
 }
