--- a/web/src/layout/Dashboard/Dashboard.module.scss
+++ b/web/src/layout/Dashboard/Dashboard.module.scss
@@ -1,4 +1,4 @@
-.dashboard {
+.container {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -17,3 +17,4 @@
   overflow: auto;
   border-top-left-radius: 0.3rem;
 }
+
