--- a/web/src/layout/Dashboard/Dashboard.module.scss
+++ b/web/src/layout/Dashboard/Dashboard.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   min-height: 0;
+  flex-grow: 1;
 }
 
 .content {
@@ -17,4 +18,3 @@
   overflow: auto;
   border-top-left-radius: 0.3rem;
 }
-
