--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -2,6 +2,18 @@ $font: 'Sora';
 
 * {
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    width: 0.6rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 0.6rem;
+    box-shadow: inset 0 0 0.6rem 0.6rem var(--color-grey-700);
+    border: solid 0.1rem transparent;
+    border-top: none;
+    border-bottom: none;
+  }
 }
 
 p {
