--- a/web/src/layout/Dashboard/Sidebar/Sidebar.module.scss
+++ b/web/src/layout/Dashboard/Sidebar/Sidebar.module.scss
@@ -2,9 +2,21 @@
   background-color: var(--elevation-2);
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
   flex-basis: 15rem;
   flex-shrink: 0;
   flex-grow: 0;
   overflow: auto;
+  max-height: 100%;
+}
+
+.list {
+  overflow: auto;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.block {
+  padding: 1rem 0.75rem;
 }
