feat(web): accountButton real data
* create new userAPI: userAPI.get

* new queries: query.user

* implement dynamic accountButton

* show current email is ChangeEmail

--- a/web/src/pages/root/_layout/RootLayout.module.scss
+++ b/web/src/pages/root/_layout/RootLayout.module.scss
@@ -18,5 +18,15 @@
     pointer-events: none;
     user-select: none;
     border: none;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  svg {
+    flex-shrink: 0;
+  }
+
+  div {
+    overflow: hidden;
   }
 }
