feat(web): add semi transparent border
* create css root variable: --border-semi-trans

* add semi transparent border to surfaces to add contrast

--- a/web/src/pages/root/_components/Card/Card.module.scss
+++ b/web/src/pages/root/_components/Card/Card.module.scss
@@ -2,6 +2,7 @@
   padding: 2rem;
   background-color: var(--elevation-2);
   border-radius: 0.3rem;
+  border: var(--border-semi-trans);
 
   &_titled {
     padding-top: 1.25rem;
@@ -10,6 +11,6 @@
 
 .title {
   text-transform: capitalize;
-  border-bottom: 1px var(--elevation-9) solid;
+  border-bottom: var(--border-semi-trans);
   padding-bottom: 0.5rem;
 }
