--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -36,6 +36,8 @@ input[type='text']::placeholder {
 :root {
   color-scheme: dark;
 
+  --border-semi-trans: 1px rgba(255, 255, 255, 0.1) solid;
+
   --elevation-0: #000000;
   --elevation-1: #0d0d0d;
   --elevation-2: #121212;
