feat(web): add text secondary color variable
* add variable: --text-secondary

* add variable: --text-primary

* use --text-secondary for all grey text

--- a/web/src/pages/root/_components/Project/Project.module.scss
+++ b/web/src/pages/root/_components/Project/Project.module.scss
@@ -36,7 +36,7 @@
 
 .description {
   font-size: var(--font-size-xs);
-  color: var(--color-grey-700);
+  color: var(--text-secondary);
 }
 
 .moreButton {
