--- a/web/src/pages/settings/_components/Session/Session.module.scss
+++ b/web/src/pages/settings/_components/Session/Session.module.scss
@@ -11,7 +11,7 @@
     font-size: var(--font-size-sm);
 
     &:first-child {
-      color: var(--color-grey-500);
+      color: var(--text-secondary);
     }
   }
 }
