--- a/web/src/layout/Dashboard/Sidebar/SidebarItemGroup.module.scss
+++ b/web/src/layout/Dashboard/Sidebar/SidebarItemGroup.module.scss
@@ -1,6 +1,6 @@
 .title {
   text-transform: capitalize;
-  opacity: 0.3;
+  color: var(--text-secondary);
   font-size: var(--font-size-xs);
   margin-left: 1.5rem;
   margin-bottom: 0.3rem;
