--- a/web/src/pages/root/_layout/RootLayout.module.scss
+++ b/web/src/pages/root/_layout/RootLayout.module.scss
@@ -22,7 +22,7 @@
 
   p {
     font-size: var(--font-size-xs);
-    color: var(--color-grey-700);
+    color: var(--text-secondary);
   }
 
   svg {
