--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -39,6 +39,22 @@ input[type='text']::placeholder {
   --border-semi-trans: 1px var(--color-grey-850) solid;
   --text-secondary: var(--color-grey-700);
   --text-primary: var(--color-white);
+  --project-color-0: var(--color-red-400);
+  --project-color-1: var(--color-pink-400);
+  --project-color-2: var(--color-purple-400);
+  --project-color-3: var(--color-deep-purple-400);
+  --project-color-4: var(--color-indigo-400);
+  --project-color-5: var(--color-blue-400);
+  --project-color-6: var(--color-light-blue-400);
+  --project-color-7: var(--color-cyan-400);
+  --project-color-8: var(--color-teal-400);
+  --project-color-9: var(--color-green-400);
+  --project-color-10: var(--color-light-green-400);
+  --project-color-11: var(--color-lime-400);
+  --project-color-12: var(--color-yellow-400);
+  --project-color-13: var(--color-amber-400);
+  --project-color-14: var(--color-orange-400);
+  --project-color-15: var(--color-deep-orange-400);
 
   --elevation-0: #000000;
   --elevation-1: #0d0d0d;
