feat(web): update components to new styles
* adding grey border to surfaces

* flatten elevation

* update MenuDropdown

* update Modal

* update Project

* update Task

* update accountButton

* update Session

--- a/web/src/components/Menu/MenuDropdown.module.scss
+++ b/web/src/components/Menu/MenuDropdown.module.scss
@@ -1,7 +1,8 @@
 .menuDropdown {
   position: fixed;
   border-radius: 0.3rem;
-  background-color: var(--elevation-9);
+  background-color: var(--elevation-6);
+  border: var(--border-semi-trans);
   display: flex;
   flex-direction: column;
 }
