--- a/web/src/components/Modal/Modal.module.scss
+++ b/web/src/components/Modal/Modal.module.scss
@@ -9,6 +9,8 @@
 
 .content {
   background-color: var(--elevation-2);
+  border-radius: 0.3rem;
+  border: var(--border-semi-trans);
   padding: 2rem;
   max-width: 40%;
 }
