--- a/web/src/pages/root/_components/Project/Project.module.scss
+++ b/web/src/pages/root/_components/Project/Project.module.scss
@@ -3,19 +3,19 @@
 
 .project {
   border-radius: 0.3rem;
-  background-color: var(--elevation-4);
+  background-color: var(--elevation-2);
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
   padding: 0.5rem 0.5rem 0.5rem 1rem;
-  border-width: 0 0 0 0.3rem;
-  border-style: solid;
-  @include project-colors(border-color);
+  border: var(--border-semi-trans);
+  border-left-width: 0.3rem;
+  @include project-colors(border-left-color);
 
   &:hover {
-    background-color: var(--elevation-6);
+    background-color: var(--elevation-5);
   }
 
   & > * {
@@ -59,7 +59,8 @@
 
 .loading {
   border-radius: 0.3rem;
-  background-color: var(--elevation-4);
+  background-color: var(--elevation-2);
+  border: var(--border-semi-trans);
   padding: 0.5rem 0.5rem 0.5rem 1rem;
   gap: 0.5rem;
 
