--- a/web/src/pages/root/_components/Task/Task.module.scss
+++ b/web/src/pages/root/_components/Task/Task.module.scss
@@ -4,16 +4,15 @@
 .taskCard {
   display: flex;
   gap: 0.8rem;
-  background-color: var(--elevation-4);
+  // background-color: rgba($color: #fff, $alpha: 0.03);
   border-radius: 0.3rem;
   padding: 0.8rem;
-  border-width: 0 0 0 0.3rem;
-  border-style: solid;
-  border-color: transparent;
-  @include project-colors(border-color);
+  border: var(--border-semi-trans);
+  border-left-width: 0.3rem;
+  @include project-colors(border-left-color);
 
   &:hover {
-    background-color: var(--elevation-6);
+    background-color: var(--elevation-5);
   }
 }
 
@@ -50,7 +49,8 @@
 }
 
 .loading {
-  background-color: var(--elevation-4);
+  background-color: var(--elevation-2);
+  border: var(--border-semi-trans);
   border-radius: 0.3rem;
   padding-left: 1.1rem;
   padding: 0.8rem;
