--- a/web/src/pages/settings/_components/Session/Session.module.scss
+++ b/web/src/pages/settings/_components/Session/Session.module.scss
@@ -1,6 +1,7 @@
 .container {
   padding: 1rem 1.5rem;
-  background-color: var(--elevation-4);
+  background-color: var(--elevation-2);
+  border: var(--border-semi-trans);
   border-radius: 0.3rem;
   margin-bottom: 0.3rem;
   display: block;
